--- a/tema_undangan/tema_1/index.html
+++ b/tema_undangan/tema_1/index.html
@@ -731,7 +731,7 @@
                 <v-img src="https://cdn-icons-png.flaticon.com/512/241/241528.png" max-width="200"></v-img>
               <v-btn dark class="my-16" color="brown darken-3">Reservasi Tamu</v-btn>
               </div>
-              <p class="titlePage8 font-weight-bold text-center">Best Wishes</p>
+              <p class="titlePage8 font-weight-bold text-center" id="guestBook">Best Wishes</p>
               <v-divider class="hr4"></v-divider>
               <v-row justify="center" class="fill-height mt-10 mx-16" v-if="displayDesktop">
                 <v-col cols="12">
