--- a/tema_undangan/tema_7/index.html
+++ b/tema_undangan/tema_7/index.html
@@ -725,7 +725,7 @@
                 <v-img src="https://cdn-icons-png.flaticon.com/512/241/241528.png" max-width="200"></v-img>
               <v-btn class="my-16" depressed outlined rounded class="lokasi-btn">Reservasi Tamu</v-btn>
               </div>
-                    <div align="center" class="mt-16">
+                    <div align="center" class="mt-16" id="guestBook">
                         <p class="fontLove blue--text">Guest Book</p>
                     </div>
                     <v-row justify="center" align="center">
