--- a/tema_undangan/tema_8/index.html
+++ b/tema_undangan/tema_8/index.html
@@ -484,7 +484,7 @@
                 <v-img src="https://cdn-icons-png.flaticon.com/512/241/241528.png" max-width="200"></v-img>
               <v-btn class="my-16" depressed outlined rounded class="lokasi-btn">Reservasi Tamu</v-btn>
               </div>
-                            <h1 class="fontPage1 my-16" style="font-size: 50px;">Guest Book</h1>
+                            <h1 class="fontPage1 my-16" id="guestBook" style="font-size: 50px;">Guest Book</h1>
 
                             <div justify="center" align="center" v-if="displayDesktop">
                                 <v-card width="700" color="green" class="mt-10">
