--- a/tema_undangan/tema_5/index.html
+++ b/tema_undangan/tema_5/index.html
@@ -23,10 +23,10 @@
                     <div v-if="displayDesktop">
                         <v-row>
                             <v-col cols="7">
-                                <v-img width="855" class="overflowFixed"
+                                <v-img class="overflowFixed widthImg"
                                     :src="'https://merestui.com/'+ dataApi.wedding.gallery_1">
                                     <div class="d-flex justify-end">
-                                        <v-btn fab large @click="scrollPlay" class="mt-2 mr-2">
+                                        <v-btn fab x-large @click="scrollPlay" class="mt-2 mr-2">
                                             <v-icon>mdi-music-note</v-icon>
                                         </v-btn>
                                     </div>
@@ -181,7 +181,7 @@
                                         {{ dataApi.wedding.nama_lengkap_pria }}</p>
                                     <p class="font-weight-light text-center mx-16">{{ dataApi.wedding.profil_pria }}</p>
 
-                                    <v-card color="white">
+                                    <v-card color="white" class="cardWidth">
                                         <v-card-title class="justify-center">
                                             <v-card color="brown lighten-4" width="100%">
                                                 <v-card-title class="justify-center">
@@ -263,7 +263,7 @@
                                 </v-container>
                                 <v-container fluid class="bg-page5">
                                     <v-card class="mt-16 pb-5">
-                                        <v-card-title class="justify-center body-1">
+                                        <v-card-title class="justify-center body-1" >
                                             <span class="fontPasangan">{{ dataApi.wedding.h_live_streaming }}</span>
                                         </v-card-title>
                                         <v-divider></v-divider>
@@ -512,7 +512,7 @@
                                     waktu singkat."</p>
                             </v-container>
 
-                            <v-carousel cycle height="600" hide-delimiters hide-delimiter-background
+                                <v-carousel cycle height="600" hide-delimiters hide-delimiter-background
                                 show-arrows-on-hover>
                                 <v-carousel-item v-for="(item,i) in items" :key="i" :src="item.src"
                                     reverse-transition="fade-transition" transition="fade-transition"></v-carousel-item>
