--- a/tema_undangan/tema_8/index.html
+++ b/tema_undangan/tema_8/index.html
@@ -253,7 +253,7 @@
                                         <p class="text-center mx-6 subtitle font-weight-light">
                                                    Mengingat pandemi covid-19, kami tidak dapat mengundang seluruh sahabat tercinta kami secara langsung, karena penting bagi kami untuk menjaga semuanya agar tetap aman, jadi selain acara secara langsung, kami juga berencana untuk mempublikasikan pernikahan kami secara virtual melalui zoom dan live instagram yang bisa kamu ikuti melalui link berikut</p>
                                                     <div class="d-flex justify-center">
-                                                    <v-btn depressed outlined rounded >
+                                                    <v-btn depressed outlined rounded class="mr-1">
                                                     <v-icon left>mdi-instagram</v-icon>Instagram
                                                 </v-btn>
                                                 <v-btn depressed outlined rounded >
@@ -274,7 +274,7 @@
                                         <p class="text-center mx-6 subtitle font-weight-light">
                                                    Mengingat pandemi covid-19, kami tidak dapat mengundang seluruh sahabat tercinta kami secara langsung, karena penting bagi kami untuk menjaga semuanya agar tetap aman, jadi selain acara secara langsung, kami juga berencana untuk mempublikasikan pernikahan kami secara virtual melalui zoom dan live instagram yang bisa kamu ikuti melalui link berikut</p>
                                                     <div class="d-flex justify-center">
-                                                    <v-btn depressed outlined rounded >
+                                                    <v-btn depressed outlined rounded class="mr-1">
                                                     <v-icon left>mdi-instagram</v-icon>Instagram
                                                 </v-btn>
                                                 <v-btn depressed outlined rounded >
