--- a/tema_undangan/tema_7/index.html
+++ b/tema_undangan/tema_7/index.html
@@ -755,7 +755,7 @@
                                 <v-btn color="blue-grey" @click="kirimUcapan" dark>Kirim </v-btn>
                             </v-card-title>
                         </v-card>
-                        <v-card width="600" class="mt-10 marginCard" style="border: 2px solid #1976D2; background-color: transparent;">
+                        <v-card width="600" class="mt-10 " style="border: 2px solid #1976D2; background-color: transparent;">
                             <v-card-title>
                                 <div class="overflowAuto">
                                 <div v-for="(i, idx) in dataApi.comments" :key="idx" class="text-start">
@@ -769,7 +769,7 @@
                         </v-card>
                     </div>
                     <div v-else>
-                        <v-card color="blue darken-2" class="mt-10">
+                        <v-card color="blue darken-2" class="my-10">
                             <v-card-title>
                                 <v-text-field v-model="form.nama" label="Nama" solo></v-text-field>
                                 <v-row>
