--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <a href="./tema_undangan/tema_8/index.html">Tema 8</a>
     <a href="./tema_undangan/tema_9/index.html">Tema 9</a>
     <a href="./tema_undangan/tema_10/index.html">Tema 10</a>
+    <a href="./testing/index.html">testing</a>
 </body>
 </html>
