--- a/tema_undangan/tema_5/index.html
+++ b/tema_undangan/tema_5/index.html
@@ -705,7 +705,7 @@
                                         </v-row>
                                     </div>
                                 </div>
-                                <v-card class="mt-10" color="transparent">
+                                <v-card class="my-16" color="transparent">
                                     <v-card-title class="body-2 font-weight-bold">
                                         Kirim Ucapan:
                                     </v-card-title>
